--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-Output/
+# データファイル
 AllDayData.csv
+*.csv
+*.xlsx
+*.xls
+
+# 出力ディレクトリ
+Output/
+output/
+results/
+logs/
+
+# Python関連
 *.pyc
 *.pyo
 *.pyd
@@ -7,3 +18,56 @@ AllDayData.csv
 *.pyz
 *.pywz
 __pycache__/
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+*.ipynb
+
+# IDE関連
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# macOS関連
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows関連
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# 一時ファイル
+*.tmp
+*.temp
+*.log
+*.bak
+*.backup
+
+# 機械学習モデル（大きなファイル）
+*.pkl
+*.joblib
+*.h5
+*.model
+
+# 環境設定
+.env
+.venv/
+venv/
+env/
+ENV/
+
+# テスト関連
+test_*.py
+*_test.py
+tests/
+testing/
